finalizada dim produto

--- a/models/staging/erp/erp.yml
+++ b/models/staging/erp/erp.yml
@@ -12,3 +12,6 @@ sources:
             data_tests:
               - unique
               - not_null  
+      - name: product
+      - name: category
+      - name: supplier
